--- a/Style/Style.css
+++ b/Style/Style.css
@@ -1,15 +1,70 @@
-html{
+.full {
 
-background-color:lightGrey;
-width: 100%;
-    
+    width: 100% !important;
+
 }
 
-body{
+.left{
 
-    width: 80%;
-    background-color: whitesmoke;
-    margin-left: 10%;
+    float: left;
+
+}
+.right {
+
+    float: right;
+
+}
+
+.rightmargin{
+
+    margin-right: 5%;
+
+}
+
+.Searchbox {
+
+    margin-top: 1.5%;
+    background-color: lightgray;
+    width: 500px;
+
+}
+
+.link {
+
+    float: right;
+
+}
+
+a:link, a:visited {
+
+    text-decoration: none;
+    display: inline-block;
+    color: white;
+
+}
+
+a:hover, a:active {
+
+    text-decoration: none;
+    color: lightgray;
+}
+
+body {
+
+    width: 100%;
+    background-color: white;
+
+}
+
+header{
+
+    width: 100%;
+
+}
+
+nav{ 
+
+    width: 100%;
 
 }
 
@@ -17,11 +72,9 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: auto;
     background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 80%;
+    height: 5%;
 }
 
 li {
@@ -36,28 +89,14 @@ li a {
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
+li a:hover {
     background-color: #111;
 }
 
-.full {
+h4 {
 
-    width: 100% !important;
-
-}
-
-
-.active {
-    background-color: #4CAF50;
-}
-
-.left{
-
-    float: left;
-
-}
-.right {
-
-    float: right;
+    color: white;
+    margin-top: 15%;
+    margin-left: 10%;
 
 }
